show playlist on template

--- a/src/app/youtube-playlist/youtube-playlist.component.html
+++ b/src/app/youtube-playlist/youtube-playlist.component.html
@@ -1,1 +1,4 @@
-<p>youtube-playlist works!</p>
+<h3>Youtube playlist</h3>
+<div *ngFor="let video of playList">
+  <a href="{{video.src}}">{{video.name}}</a>
+</div>
