--- a/src/app/youtube-playlist/youtube-playlist.component.html
+++ b/src/app/youtube-playlist/youtube-playlist.component.html
@@ -1,4 +1,4 @@
 <h3>Youtube playlist</h3>
 <div *ngFor="let video of playList">
-  <a href="{{video.src}}">{{video.name}}</a>
+  <a href="{{video.id}}">{{video.name}}</a>
 </div>
