--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div class="container">
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -16,3 +17,4 @@
   </ul>
 </nav>
 <router-outlet></router-outlet>
+</div>
