--- a/src/app/youtube/youtube-player/youtube-player.component.html
+++ b/src/app/youtube/youtube-player/youtube-player.component.html
@@ -1,1 +1,4 @@
-<p>youtube-player works!</p>
+<div *ngIf="video">
+  <h3>{{video.name}}</h3>
+  <iframe width="560" height="315" [src]="getSrc()" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
